style.css
html, body {
    font-family: Roboto, sans-serif;
    font-size: 18px;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

/* navbar */

.navbar, header, footer {
    background-color: #9b5de5;
    color: white;
}

.navbar {
    padding: 2rem 0;
}

.navbar-inner, .header-inner {
    width: min(1250px, 80vw);
    margin: 0 auto;
    display: flex;
    align-items: center;
}

.navbar img {
    max-height: 65px;
    position: fixed;
    top: 12px;
    left: 12px;
    transition: transform 1s ease-in-out;
}

.navbar img:hover {
    transform: rotate(360deg);
}

.menu {
    margin-left: auto;
}

.navbar .menu a {
    margin-left: 1.5rem;
    text-decoration: none;
    color: white;
    font-weight: 700;
    transition: color 1s;
}

.navbar .menu a:hover {
    color: #00f5d4;
}

/* claim */

.claim {
    width: fit-content;
    margin: 0 auto;
}

.claim p {
    font-size: 36px;
    font-weight: 700;
    color: #00bbf9;
    margin: 1rem;
}

.claim .problems {
    font-style: italic;
}

/* header */

header {
    padding: 4rem 0;
}

.header-inner {
    justify-content: space-between;
    gap: 2rem;
}

header h1 {
    font-size: 54px;
    font-weight: 900;
}

h3 {
    font-size: 36px;
    margin: 1rem 0;
}

.header-bottom {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

header .small {
    font-size: 16px;
    font-style: italic;
    margin: 0;
}

header img {
    width: 400px;
    height: 400px;
    border: 6px solid #fee440;
    border-radius: 8px;
}

button, .call-to-act {
    background-color: #f15bb5;
    color: white;
    font-size: 24px;
}

button {
    padding: 10px 20px;
    border: 2px solid white;
    cursor: pointer;
    box-shadow: 5px 5px #666;
}
  
button:hover {
   background-color: #d81289;
}

button:active {
  background-color: #d81289;
  box-shadow: 2px 2px #333;
  transform: translateX(4px) translateY(4px);
}


button, .random-info img, .call-to-act {
    border-radius: 8px;
}

/* "meet the team" + "we're passionate about" sections */

.random-info {
    width: min(950px, 60vw);
    margin: 0 auto;
}

.claim, .random-info, .quote-background {
    padding: 3rem 0;
}

.random-info-inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    font-size: 18px;
}

h2 {
    color: #9b5de5;
    font-size: 36px;
    font-weight: 900;
    text-align: center;
}

.random-info img {
    border: 4px solid #f15bb5;
    width: 150px;
    height: 150px;
    display: block;
}

.random-info .name {
    font-family: 'Libre Baskerville', serif;
    font-size: 22px;
    max-width: 150px;
    margin-bottom: 0;
}

.random-info .description {
    text-transform: uppercase;
    max-width: 150px;
    margin: 0;
}

.random-info ul {
    list-style-type: "\1F9F6";
    padding-inline-start: 15px;
}

.random-info li {
    padding-left: 5px;
}

/* quote section */

.quote {
    width: fit-content;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote-background {
    background-color: #00f5d4;
}

.quote .words {
    position: relative;
    font-size: 36px;
    font-style: italic;
    margin: 2rem 0 0 0;
    width: fit-content;
}

.words:before,
.words:after {
	position: absolute;
    font-family: 'Libre Baskerville', serif;
	color: #fee440;
	font-size: 12rem;
	width: 4rem;
	height: 4rem;
}

.words:before {
	content: '“';
	left: -7rem;
	top: -4.3rem;
}

.words:after {
	content: '”';
	right: -1.7rem;
	bottom: -1.3rem;
}

.quote .author {
    text-transform: uppercase;
    font-weight: 700;
    margin: 1rem 0 4rem;
}

/* call to action */

.call-to-act {
    width: min(1250px, 80vw);
    margin: 64px auto;
    padding: 20px 0;
}

.call-to-act-inner {
    width: min(950px, 60vw);
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* footer */

footer {
    text-align: center;
    padding: 30px 0;
}

footer p {
    height: 3.2rem;
}

footer a {
    color: white;
    transition: color 1s, font-size 1s;
}

footer a:hover {
    color: #FF8EBE;
    font-size: larger;
    font-weight: 900;
}

footer img {
    max-width: 300px;
}

